--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇹🇭 泰国-1.17MB/s(Youtube:不良林), server: 119.59.116.248, port: 17159, type: trojan, password: PHnvNV7HGp, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-1.87MB/s(Youtube:不良林), server: 38.121.43.65, port: 2375, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
-  - {name: 🇺🇸 美国-2.41MB/s(Youtube:不良林), server: 167.88.61.14, port: 443, type: ss, cipher: aes-256-gcm, password: pKEW8JPByTVTLtM}
-  - {name: 🇨🇳 中国-418.9KB/s(Youtube:不良林), server: best01.downloadmovie.cn, port: 65093, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best01.downloadmovie.cn}}
-  - {name: 🇺🇸 美国-3.16MB/s(Youtube:不良林), server: us-05.licom.ml, port: 12501, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: us-05.licom.ml, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-2.14MB/s(Youtube:不良林), server: 172.99.188.71, port: 443, type: ss, cipher: aes-256-gcm, password: pKEW8JPByTVTLtM}
+  - {name: 🇺🇸 美国-2.43MB/s(Youtube:不良林), server: 38.143.66.20, port: 9101, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
   - {name: 🇺🇸 美国-704.1KB/s(Youtube:不良林), server: 5.188.0.151, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇺🇸 美国-2.99MB/s(Youtube:不良林), server: us-am32-5.eqnode.net, port: 8081, type: ssr, cipher: aes-256-cfb, password: YFVrXZgRo, protocol: origin, obfs: tls1.2_ticket_auth, protocol-param: "", obfs-param: ""}
-  - {name: 🇺🇸 美国-2.84MB/s(Youtube:不良林), server: azgy001.xiba1.xyz, port: 20711, type: trojan, password: 7497242f-3044-3c77-bf48-14bb26c92a83, sni: azgy001.xiba1.xyz, skip-cert-verify: true}
-  - {name: 🇨🇦 加拿大-3.00MB/s(Youtube:不良林), server: 134.195.196.149, port: 7307, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
+  - {name: 🇯🇵 日本-1.18MB/s(Youtube:不良林), server: 185.160.26.35, port: 810, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇺🇸 美国-3.16MB/s(Youtube:不良林), server: us-05.licom.ml, port: 12501, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: us-05.licom.ml, skip-cert-verify: true}
+  - {name: 🇩🇪 德国-2.34MB/s(Youtube:不良林), server: 193.108.117.75, port: 443, type: ss, cipher: aes-256-gcm, password: pKEW8JPByTVTLtM}
+  - {name: 🇨🇳 中国-1.99MB/s(Youtube:不良林), server: 116.129.254.192, port: 16264, type: vmess, uuid: c7cab382-c1a0-3a50-8606-280124aaad86, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-7.34MB/s(Youtube:不良林), server: 120.241.236.218, port: 16246, type: vmess, uuid: c7cab382-c1a0-3a50-8606-280124aaad86, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-4.24MB/s(Youtube:不良林), server: 116.129.254.192, port: 16113, type: vmess, uuid: c7cab382-c1a0-3a50-8606-280124aaad86, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-17.95MB/s(Youtube:不良林), server: 120.241.236.215, port: 16111, type: vmess, uuid: c7cab382-c1a0-3a50-8606-280124aaad86, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-3.61MB/s(Youtube:不良林), server: 120.241.236.215, port: 16213, type: vmess, uuid: c7cab382-c1a0-3a50-8606-280124aaad86, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇹🇭 泰国-1.17MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.87MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.41MB/s(Youtube:不良林)
-      - 🇨🇳 中国-418.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.16MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.14MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.43MB/s(Youtube:不良林)
       - 🇺🇸 美国-704.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.99MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.84MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.00MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.18MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.16MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.34MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.99MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.34MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.24MB/s(Youtube:不良林)
+      - 🇨🇳 中国-17.95MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.61MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇹🇭 泰国-1.17MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.87MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.41MB/s(Youtube:不良林)
-      - 🇨🇳 中国-418.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.16MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.14MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.43MB/s(Youtube:不良林)
       - 🇺🇸 美国-704.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.99MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.84MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.00MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.18MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.16MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.34MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.99MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.34MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.24MB/s(Youtube:不良林)
+      - 🇨🇳 中国-17.95MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.61MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇹🇭 泰国-1.17MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.87MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.41MB/s(Youtube:不良林)
-      - 🇨🇳 中国-418.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.16MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.14MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.43MB/s(Youtube:不良林)
       - 🇺🇸 美国-704.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.99MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.84MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.00MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.18MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.16MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.34MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.99MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.34MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.24MB/s(Youtube:不良林)
+      - 🇨🇳 中国-17.95MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.61MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇹🇭 泰国-1.17MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.87MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.41MB/s(Youtube:不良林)
-      - 🇨🇳 中国-418.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.16MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.14MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.43MB/s(Youtube:不良林)
       - 🇺🇸 美国-704.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.99MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.84MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.00MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.18MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.16MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.34MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.99MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.34MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.24MB/s(Youtube:不良林)
+      - 🇨🇳 中国-17.95MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.61MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇹🇭 泰国-1.17MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.87MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.41MB/s(Youtube:不良林)
-      - 🇨🇳 中国-418.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.16MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.14MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.43MB/s(Youtube:不良林)
       - 🇺🇸 美国-704.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.99MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.84MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.00MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.18MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.16MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.34MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.99MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.34MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.24MB/s(Youtube:不良林)
+      - 🇨🇳 中国-17.95MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.61MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇹🇭 泰国-1.17MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.87MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.41MB/s(Youtube:不良林)
-      - 🇨🇳 中国-418.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.16MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.14MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.43MB/s(Youtube:不良林)
       - 🇺🇸 美国-704.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.99MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.84MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.00MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.18MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.16MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.34MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.99MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.34MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.24MB/s(Youtube:不良林)
+      - 🇨🇳 中国-17.95MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.61MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇹🇭 泰国-1.17MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.87MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.41MB/s(Youtube:不良林)
-      - 🇨🇳 中国-418.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.16MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.14MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.43MB/s(Youtube:不良林)
       - 🇺🇸 美国-704.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.99MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.84MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.00MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.18MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.16MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.34MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.99MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.34MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.24MB/s(Youtube:不良林)
+      - 🇨🇳 中国-17.95MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.61MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
