--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,11 +5,11 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-2.43MB/s(Youtube:不良林), server: 38.143.66.20, port: 9101, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
-  - {name: 🇺🇸 美国-704.1KB/s(Youtube:不良林), server: 5.188.0.151, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇯🇵 日本-1.18MB/s(Youtube:不良林), server: 185.160.26.35, port: 810, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇺🇸 美国-3.16MB/s(Youtube:不良林), server: us-05.licom.ml, port: 12501, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: us-05.licom.ml, skip-cert-verify: true}
-  - {name: 🇩🇪 德国-2.34MB/s(Youtube:不良林), server: 193.108.117.75, port: 443, type: ss, cipher: aes-256-gcm, password: pKEW8JPByTVTLtM}
+  - {name: 🇺🇸 美国-384.9KB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
+  - {name: 🇨🇦 (已存活1天)加拿大-2.46MB/s(Youtube:不良林), server: 38.111.114.246, port: 8882, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
+  - {name: 🇺🇸 美国-2.03MB/s(Youtube:不良林), server: azgy001.xiba1.xyz, port: 20711, type: trojan, password: 7497242f-3044-3c77-bf48-14bb26c92a83, sni: azgy001.xiba1.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-2.86MB/s(Youtube:不良林), server: 116.129.254.192, port: 16225, type: vmess, uuid: c7cab382-c1a0-3a50-8606-280124aaad86, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇨🇦 加拿大-1.34MB/s(Youtube:不良林), server: 196.247.59.154, port: 801, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
   - {name: 🇨🇳 中国-1.99MB/s(Youtube:不良林), server: 116.129.254.192, port: 16264, type: vmess, uuid: c7cab382-c1a0-3a50-8606-280124aaad86, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
   - {name: 🇨🇳 中国-7.34MB/s(Youtube:不良林), server: 120.241.236.218, port: 16246, type: vmess, uuid: c7cab382-c1a0-3a50-8606-280124aaad86, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
   - {name: 🇨🇳 中国-4.24MB/s(Youtube:不良林), server: 116.129.254.192, port: 16113, type: vmess, uuid: c7cab382-c1a0-3a50-8606-280124aaad86, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
@@ -21,11 +21,11 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-2.43MB/s(Youtube:不良林)
-      - 🇺🇸 美国-704.1KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.18MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.16MB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.34MB/s(Youtube:不良林)
+      - 🇺🇸 美国-384.9KB/s(Youtube:不良林)
+      - 🇨🇦 (已存活1天)加拿大-2.46MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.03MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.86MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.34MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.99MB/s(Youtube:不良林)
       - 🇨🇳 中国-7.34MB/s(Youtube:不良林)
       - 🇨🇳 中国-4.24MB/s(Youtube:不良林)
@@ -36,11 +36,11 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-2.43MB/s(Youtube:不良林)
-      - 🇺🇸 美国-704.1KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.18MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.16MB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.34MB/s(Youtube:不良林)
+      - 🇺🇸 美国-384.9KB/s(Youtube:不良林)
+      - 🇨🇦 (已存活1天)加拿大-2.46MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.03MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.86MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.34MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.99MB/s(Youtube:不良林)
       - 🇨🇳 中国-7.34MB/s(Youtube:不良林)
       - 🇨🇳 中国-4.24MB/s(Youtube:不良林)
@@ -52,11 +52,11 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-2.43MB/s(Youtube:不良林)
-      - 🇺🇸 美国-704.1KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.18MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.16MB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.34MB/s(Youtube:不良林)
+      - 🇺🇸 美国-384.9KB/s(Youtube:不良林)
+      - 🇨🇦 (已存活1天)加拿大-2.46MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.03MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.86MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.34MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.99MB/s(Youtube:不良林)
       - 🇨🇳 中国-7.34MB/s(Youtube:不良林)
       - 🇨🇳 中国-4.24MB/s(Youtube:不良林)
@@ -72,11 +72,11 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-2.43MB/s(Youtube:不良林)
-      - 🇺🇸 美国-704.1KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.18MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.16MB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.34MB/s(Youtube:不良林)
+      - 🇺🇸 美国-384.9KB/s(Youtube:不良林)
+      - 🇨🇦 (已存活1天)加拿大-2.46MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.03MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.86MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.34MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.99MB/s(Youtube:不良林)
       - 🇨🇳 中国-7.34MB/s(Youtube:不良林)
       - 🇨🇳 中国-4.24MB/s(Youtube:不良林)
@@ -87,11 +87,11 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-2.43MB/s(Youtube:不良林)
-      - 🇺🇸 美国-704.1KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.18MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.16MB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.34MB/s(Youtube:不良林)
+      - 🇺🇸 美国-384.9KB/s(Youtube:不良林)
+      - 🇨🇦 (已存活1天)加拿大-2.46MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.03MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.86MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.34MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.99MB/s(Youtube:不良林)
       - 🇨🇳 中国-7.34MB/s(Youtube:不良林)
       - 🇨🇳 中国-4.24MB/s(Youtube:不良林)
@@ -103,11 +103,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-2.43MB/s(Youtube:不良林)
-      - 🇺🇸 美国-704.1KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.18MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.16MB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.34MB/s(Youtube:不良林)
+      - 🇺🇸 美国-384.9KB/s(Youtube:不良林)
+      - 🇨🇦 (已存活1天)加拿大-2.46MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.03MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.86MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.34MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.99MB/s(Youtube:不良林)
       - 🇨🇳 中国-7.34MB/s(Youtube:不良林)
       - 🇨🇳 中国-4.24MB/s(Youtube:不良林)
@@ -128,11 +128,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-2.43MB/s(Youtube:不良林)
-      - 🇺🇸 美国-704.1KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.18MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.16MB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.34MB/s(Youtube:不良林)
+      - 🇺🇸 美国-384.9KB/s(Youtube:不良林)
+      - 🇨🇦 (已存活1天)加拿大-2.46MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.03MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.86MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.34MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.99MB/s(Youtube:不良林)
       - 🇨🇳 中国-7.34MB/s(Youtube:不良林)
       - 🇨🇳 中国-4.24MB/s(Youtube:不良林)
