--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-384.9KB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
-  - {name: 🇨🇦 (已存活1天)加拿大-2.46MB/s(Youtube:不良林), server: 38.111.114.246, port: 8882, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
-  - {name: 🇺🇸 美国-2.03MB/s(Youtube:不良林), server: azgy001.xiba1.xyz, port: 20711, type: trojan, password: 7497242f-3044-3c77-bf48-14bb26c92a83, sni: azgy001.xiba1.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-2.86MB/s(Youtube:不良林), server: 116.129.254.192, port: 16225, type: vmess, uuid: c7cab382-c1a0-3a50-8606-280124aaad86, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇨🇦 加拿大-1.34MB/s(Youtube:不良林), server: 196.247.59.154, port: 801, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇦 加拿大-1.44MB/s(Youtube:不良林), server: 196.247.59.154, port: 805, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇯🇵 日本-2.40MB/s(Youtube:不良林), server: 85.208.108.93, port: 7306, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
+  - {name: 🇺🇸 美国-2.34MB/s(Youtube:不良林), server: 38.143.66.20, port: 9102, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
+  - {name: 🇺🇸 美国-2.39MB/s(Youtube:不良林), server: us-am32-5.eqnode.net, port: 8081, type: ssr, cipher: aes-256-cfb, password: YFVrXZgRo, protocol: origin, obfs: tls1.2_ticket_auth, protocol-param: "", obfs-param: ""}
+  - {name: 🇨🇳 中国-5.26MB/s(Youtube:不良林), server: 116.129.254.192, port: 16106, type: vmess, uuid: c7cab382-c1a0-3a50-8606-280124aaad86, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
   - {name: 🇨🇳 中国-1.99MB/s(Youtube:不良林), server: 116.129.254.192, port: 16264, type: vmess, uuid: c7cab382-c1a0-3a50-8606-280124aaad86, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
   - {name: 🇨🇳 中国-7.34MB/s(Youtube:不良林), server: 120.241.236.218, port: 16246, type: vmess, uuid: c7cab382-c1a0-3a50-8606-280124aaad86, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
   - {name: 🇨🇳 中国-4.24MB/s(Youtube:不良林), server: 116.129.254.192, port: 16113, type: vmess, uuid: c7cab382-c1a0-3a50-8606-280124aaad86, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-17.95MB/s(Youtube:不良林), server: 120.241.236.215, port: 16111, type: vmess, uuid: c7cab382-c1a0-3a50-8606-280124aaad86, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-3.61MB/s(Youtube:不良林), server: 120.241.236.215, port: 16213, type: vmess, uuid: c7cab382-c1a0-3a50-8606-280124aaad86, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-12.29MB/s(Youtube:不良林), server: 120.241.236.215, port: 16111, type: vmess, uuid: c7cab382-c1a0-3a50-8606-280124aaad86, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-13.75MB/s(Youtube:不良林), server: 120.241.236.215, port: 16213, type: vmess, uuid: c7cab382-c1a0-3a50-8606-280124aaad86, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-384.9KB/s(Youtube:不良林)
-      - 🇨🇦 (已存活1天)加拿大-2.46MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.03MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.86MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.34MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.44MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.40MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.34MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.39MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.26MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.99MB/s(Youtube:不良林)
       - 🇨🇳 中国-7.34MB/s(Youtube:不良林)
       - 🇨🇳 中国-4.24MB/s(Youtube:不良林)
-      - 🇨🇳 中国-17.95MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.61MB/s(Youtube:不良林)
+      - 🇨🇳 中国-12.29MB/s(Youtube:不良林)
+      - 🇨🇳 中国-13.75MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-384.9KB/s(Youtube:不良林)
-      - 🇨🇦 (已存活1天)加拿大-2.46MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.03MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.86MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.34MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.44MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.40MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.34MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.39MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.26MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.99MB/s(Youtube:不良林)
       - 🇨🇳 中国-7.34MB/s(Youtube:不良林)
       - 🇨🇳 中国-4.24MB/s(Youtube:不良林)
-      - 🇨🇳 中国-17.95MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.61MB/s(Youtube:不良林)
+      - 🇨🇳 中国-12.29MB/s(Youtube:不良林)
+      - 🇨🇳 中国-13.75MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-384.9KB/s(Youtube:不良林)
-      - 🇨🇦 (已存活1天)加拿大-2.46MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.03MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.86MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.34MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.44MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.40MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.34MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.39MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.26MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.99MB/s(Youtube:不良林)
       - 🇨🇳 中国-7.34MB/s(Youtube:不良林)
       - 🇨🇳 中国-4.24MB/s(Youtube:不良林)
-      - 🇨🇳 中国-17.95MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.61MB/s(Youtube:不良林)
+      - 🇨🇳 中国-12.29MB/s(Youtube:不良林)
+      - 🇨🇳 中国-13.75MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-384.9KB/s(Youtube:不良林)
-      - 🇨🇦 (已存活1天)加拿大-2.46MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.03MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.86MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.34MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.44MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.40MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.34MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.39MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.26MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.99MB/s(Youtube:不良林)
       - 🇨🇳 中国-7.34MB/s(Youtube:不良林)
       - 🇨🇳 中国-4.24MB/s(Youtube:不良林)
-      - 🇨🇳 中国-17.95MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.61MB/s(Youtube:不良林)
+      - 🇨🇳 中国-12.29MB/s(Youtube:不良林)
+      - 🇨🇳 中国-13.75MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-384.9KB/s(Youtube:不良林)
-      - 🇨🇦 (已存活1天)加拿大-2.46MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.03MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.86MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.34MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.44MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.40MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.34MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.39MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.26MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.99MB/s(Youtube:不良林)
       - 🇨🇳 中国-7.34MB/s(Youtube:不良林)
       - 🇨🇳 中国-4.24MB/s(Youtube:不良林)
-      - 🇨🇳 中国-17.95MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.61MB/s(Youtube:不良林)
+      - 🇨🇳 中国-12.29MB/s(Youtube:不良林)
+      - 🇨🇳 中国-13.75MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-384.9KB/s(Youtube:不良林)
-      - 🇨🇦 (已存活1天)加拿大-2.46MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.03MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.86MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.34MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.44MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.40MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.34MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.39MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.26MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.99MB/s(Youtube:不良林)
       - 🇨🇳 中国-7.34MB/s(Youtube:不良林)
       - 🇨🇳 中国-4.24MB/s(Youtube:不良林)
-      - 🇨🇳 中国-17.95MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.61MB/s(Youtube:不良林)
+      - 🇨🇳 中国-12.29MB/s(Youtube:不良林)
+      - 🇨🇳 中国-13.75MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-384.9KB/s(Youtube:不良林)
-      - 🇨🇦 (已存活1天)加拿大-2.46MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.03MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.86MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.34MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.44MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.40MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.34MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.39MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.26MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.99MB/s(Youtube:不良林)
       - 🇨🇳 中国-7.34MB/s(Youtube:不良林)
       - 🇨🇳 中国-4.24MB/s(Youtube:不良林)
-      - 🇨🇳 中国-17.95MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.61MB/s(Youtube:不良林)
+      - 🇨🇳 中国-12.29MB/s(Youtube:不良林)
+      - 🇨🇳 中国-13.75MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
