--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,11 +5,11 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇦 加拿大-1.56MB/s(Youtube:不良林), server: 72.140.224.195, port: 810, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇨🇳 中国-3.57MB/s(Youtube:不良林), server: 116.129.254.192, port: 16225, type: vmess, uuid: c7cab382-c1a0-3a50-8606-280124aaad86, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇨🇦 加拿大-1.44MB/s(Youtube:不良林), server: 196.247.59.154, port: 805, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇸🇬 新加坡-1.86MB/s(Youtube:不良林), server: bai-piao-wang-zhe12.98848.xyz, port: 36736, type: vmess, uuid: 50a9c98e-8c48-4680-feff-a7ea34705ae9, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ytryr6, ws-headers: {Host: bai-piao-wang-zhe12.98848.xyz}}
-  - {name: 🇺🇸 美国-762.5KB/s(Youtube:不良林), server: 38.143.66.20, port: 5000, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇫🇷 法国-858.2KB/s(Youtube:不良林), server: 62.210.113.98, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
+  - {name: 🇯🇵 日本-3.11MB/s(Youtube:不良林), server: jp2.autlinzh.xyz, port: 8443, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: jp2.autlinzh.xyz, skip-cert-verify: true}
+  - {name: 🇨🇦 加拿大-1.70MB/s(Youtube:不良林), server: 134.195.196.85, port: 5001, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇺🇸 美国-2.93MB/s(Youtube:不良林), server: 167.88.61.14, port: 443, type: ss, cipher: aes-256-gcm, password: pKEW8JPByTVTLtM}
+  - {name: 🇺🇸 美国-2.63MB/s(Youtube:不良林), server: 172.99.188.71, port: 6379, type: ss, cipher: aes-256-gcm, password: zDNVedRFPQexG9v}
   - {name: 🇨🇦 加拿大-1.87MB/s(Youtube:不良林), server: 134.195.196.149, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
   - {name: 🇨🇦 加拿大-2.38MB/s(Youtube:不良林), server: 134.195.196.149, port: 8080, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
   - {name: 🇨🇦 加拿大-2.43MB/s(Youtube:不良林), server: 134.195.196.149, port: 8119, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
@@ -21,11 +21,11 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-1.56MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.57MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.44MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.86MB/s(Youtube:不良林)
-      - 🇺🇸 美国-762.5KB/s(Youtube:不良林)
+      - 🇫🇷 法国-858.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.11MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.70MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.93MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.63MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.87MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.38MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.43MB/s(Youtube:不良林)
@@ -36,11 +36,11 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇦 加拿大-1.56MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.57MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.44MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.86MB/s(Youtube:不良林)
-      - 🇺🇸 美国-762.5KB/s(Youtube:不良林)
+      - 🇫🇷 法国-858.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.11MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.70MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.93MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.63MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.87MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.38MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.43MB/s(Youtube:不良林)
@@ -52,11 +52,11 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-1.56MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.57MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.44MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.86MB/s(Youtube:不良林)
-      - 🇺🇸 美国-762.5KB/s(Youtube:不良林)
+      - 🇫🇷 法国-858.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.11MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.70MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.93MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.63MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.87MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.38MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.43MB/s(Youtube:不良林)
@@ -72,11 +72,11 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇦 加拿大-1.56MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.57MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.44MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.86MB/s(Youtube:不良林)
-      - 🇺🇸 美国-762.5KB/s(Youtube:不良林)
+      - 🇫🇷 法国-858.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.11MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.70MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.93MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.63MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.87MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.38MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.43MB/s(Youtube:不良林)
@@ -87,11 +87,11 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-1.56MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.57MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.44MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.86MB/s(Youtube:不良林)
-      - 🇺🇸 美国-762.5KB/s(Youtube:不良林)
+      - 🇫🇷 法国-858.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.11MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.70MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.93MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.63MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.87MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.38MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.43MB/s(Youtube:不良林)
@@ -103,11 +103,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇦 加拿大-1.56MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.57MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.44MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.86MB/s(Youtube:不良林)
-      - 🇺🇸 美国-762.5KB/s(Youtube:不良林)
+      - 🇫🇷 法国-858.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.11MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.70MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.93MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.63MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.87MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.38MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.43MB/s(Youtube:不良林)
@@ -128,11 +128,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇦 加拿大-1.56MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.57MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.44MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.86MB/s(Youtube:不良林)
-      - 🇺🇸 美国-762.5KB/s(Youtube:不良林)
+      - 🇫🇷 法国-858.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.11MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.70MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.93MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.63MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.87MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.38MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.43MB/s(Youtube:不良林)
