--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,15 +5,15 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-1.57MB/s(Youtube:不良林), server: 172.99.188.71, port: 5004, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
-  - {name: 🇨🇳 中国-2.07MB/s(Youtube:不良林), server: 116.129.254.192, port: 16264, type: vmess, uuid: c7cab382-c1a0-3a50-8606-280124aaad86, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇸🇬 新加坡-2.13MB/s(Youtube:不良林), server: s4.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s4.hazz.win, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-1.42MB/s(Youtube:不良林), server: 38.143.66.20, port: 5000, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇨🇦 加拿大-2.21MB/s(Youtube:不良林), server: 134.195.196.149, port: 8009, type: ss, cipher: aes-256-gcm, password: XKFKl2rULjIp74}
+  - {name: 🇸🇬 新加坡-596.8KB/s(Youtube:不良林), server: 47.241.220.160, port: 28475, type: vmess, uuid: 5b00ad6f-bc33-4946-8a32-b7e59620e935, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇨🇦 加拿大-2.38MB/s(Youtube:不良林), server: 134.195.196.85, port: 6697, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
+  - {name: 🇯🇵 日本-3.11MB/s(Youtube:不良林), server: jp2.autlinzh.xyz, port: 8443, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: jp2.autlinzh.xyz, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-1.39MB/s(Youtube:不良林), server: 172.99.188.71, port: 6697, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
+  - {name: 🇫🇷 法国-1.64MB/s(Youtube:不良林), server: 51.195.35.134, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/273213070933, ws-headers: {Host: 51.195.35.134}}
   - {name: 🇨🇦 加拿大-1.87MB/s(Youtube:不良林), server: 134.195.196.149, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
-  - {name: 🇨🇦 加拿大-2.38MB/s(Youtube:不良林), server: 134.195.196.149, port: 8080, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
+  - {name: 🇨🇦 加拿大-2.38MB/s(Youtube:不良林) 2, server: 134.195.196.149, port: 8080, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
   - {name: 🇨🇦 加拿大-1.93MB/s(Youtube:不良林), server: 134.195.196.149, port: 8119, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
-  - {name: 🇨🇦 加拿大-1.97MB/s(Youtube:不良林), server: 134.195.196.149, port: 5003, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
+  - {name: 🇨🇦 加拿大-2.16MB/s(Youtube:不良林), server: 134.195.196.149, port: 5003, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
   - {name: 🇨🇦 加拿大-2.10MB/s(Youtube:不良林), server: 134.195.196.149, port: 8882, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
 proxy-groups:
   - name: 🔰 节点选择
@@ -21,30 +21,30 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.57MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.07MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.13MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.42MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.21MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.87MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-596.8KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.38MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.39MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.64MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.87MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.38MB/s(Youtube:不良林) 2
       - 🇨🇦 加拿大-1.93MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.97MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.16MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.10MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-1.57MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.07MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.13MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.42MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.21MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.87MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-596.8KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.38MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.39MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.64MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.87MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.38MB/s(Youtube:不良林) 2
       - 🇨🇦 加拿大-1.93MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.97MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.16MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.10MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
@@ -52,15 +52,15 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.57MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.07MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.13MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.42MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.21MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.87MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-596.8KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.38MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.39MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.64MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.87MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.38MB/s(Youtube:不良林) 2
       - 🇨🇦 加拿大-1.93MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.97MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.16MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.10MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
@@ -72,30 +72,30 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-1.57MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.07MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.13MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.42MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.21MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.87MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-596.8KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.38MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.39MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.64MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.87MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.38MB/s(Youtube:不良林) 2
       - 🇨🇦 加拿大-1.93MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.97MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.16MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.10MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.57MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.07MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.13MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.42MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.21MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.87MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-596.8KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.38MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.39MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.64MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.87MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.38MB/s(Youtube:不良林) 2
       - 🇨🇦 加拿大-1.93MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.97MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.16MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.10MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
@@ -103,15 +103,15 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-1.57MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.07MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.13MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.42MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.21MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.87MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-596.8KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.38MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.39MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.64MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.87MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.38MB/s(Youtube:不良林) 2
       - 🇨🇦 加拿大-1.93MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.97MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.16MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.10MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
@@ -128,15 +128,15 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-1.57MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.07MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.13MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.42MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.21MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.87MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-596.8KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.38MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.39MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.64MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.87MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.38MB/s(Youtube:不良林) 2
       - 🇨🇦 加拿大-1.93MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.97MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.16MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.10MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
